--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,3 +1,10 @@
+.App {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  color: #333;
+  padding: 30px;
+}
 .h1 {
   font-weight: 400;
   font-size: 40px;
